change to css and text

--- a/index.html
+++ b/index.html
@@ -19,23 +19,24 @@
     
     <img  id="logo" src="img/BLI-logo.png"></img>
     <div id="intro">
-      <h2 id="intro">What do users of the <a href="http://www.oecdbetterlifeindex.org" target="_blank">OECD Better Life Index</a> think?</h2>
-      <p id="intro">Users of the website have rated 11 topics according to their importance. Select one of the country with the most answers and discover wonderful insights.</p>
+      <h2 id="intro">What do <a href="http://www.oecdbetterlifeindex.org" target="_blank">OECD Better Life Index</a> users think?</h2>
     </div>
+
+      <p id="intro">Users have rated the 11 topics of well-being according to the importance they give them. These topics were identified as essential by the OECD and include areas of material living conditions and quality of life. Select one of the countries below to find out more about what users think make for a better life.</p>
     <br>
     <div ><span id="selectedCou">Total</span>: <span id="numberAnswerSelection"></span> <span id="wordDesign">responses</span></div>
     <hr class="dotted">
     <h1 class="title">Pick a country</h1>
-    <h2 class="subtitle">The bubble size tells you the number of responses for a country</h2>
-    <p class="explanation">Clicking on a country updates all the charts and provide you with interesting insights on some of the people living in this country.<br/>
-    The red squares indicate the proportion of answers coming from the selected country in the total number of responses to the Better Life Index</p>
+    <h2 class="subtitle">The bubble size reflects the number of responses from that country</h2>
+    <p class="explanation">Clicking on a country will update all the charts. They will provide you with interesting insights on some of the people living in this country and their well-being preferences.<br/>
+    The red squares indicate the proportion of answers from the selected country in comparison to the total number of responses to the Better Life Index</p>
 
     <div class="bubbleDiv" id="bubble"></div>
     
       <div id="distriUserLegend"></div>
       <div id="distriUser"></div>
     <hr class="dotted">
-    <h1 class="title">Sex and Age distribution</h1>
+    <h1 class="title">Gender and Age distribution</h1>
     <h2 class="subtitle">Number</h2>
     <p class="explanation">Demographic profile of the people who have shared their index</p>
     <div id="donutGenderDistri"></div>
@@ -44,28 +45,28 @@
     <h1 class="title">Importance of the topics</h1>
     <h2 class="subtitle">In percentage</h2>
     <p class="explanation"></p>
-    <div class="keyFact">Shows you the relative importance of each topics for all of the users and the ones from the selected country<br/><img class="keyFactIcon" src="img/preferenceIcon.svg" alt="overtime"></div>
+    <div class="keyFact">See the relative importance of each topic for all users and users from the selected country<br/><img class="keyFactIcon" src="img/preferenceIcon.svg" alt="overtime"></div>
     <div id="spiderPref"></div>
     <hr class="dotted">
-    <h1 class="title">Relative importance over time</h1>
+    <h1 class="title">Relative importance of topics over time</h1>
     <h2 class="subtitle">In percentage</h2>
     <p class="explanation"></p>
-    <div class="keyFact">See how the importance attributed to each topic evolves from one year to the other<Br><img class="keyFactIcon" src="img/timeIcon.svg" alt="overtime"></div>    
+    <div class="keyFact">See how the importance attributed to each topic evolves over time<Br><img class="keyFactIcon" src="img/timeIcon.svg" alt="overtime"></div>    
     <div id="parallelYear"></div>
     <hr class="dotted">
     <h1 class="title">Relative importance of topics by age</h1>
     <h2 class="subtitle">In percentage</h2>
     <p class="explanation"></p>
-    <div class="keyFact">Show you how age can impact the relative importance of the topics <Br><img class="keyFactIcon" src="img/age2.svg" alt="overtime"></div>
+    <div class="keyFact">See how age can impact the relative importance of the topics <Br><img class="keyFactIcon" src="img/age2.svg" alt="overtime"></div>
     <div id="parallelAge"></div>
     <hr class="dotted">
-    <h1 class="title">Relative importance of topics by sex</h1>
+    <h1 class="title">Relative importance of topics by gender</h1>
     <h2 class="subtitle">In percentage</h2>
     <p class="explanation"></p>
-    <div class="keyFactGender">Show you how the sex can impact the relative importance of the topics <Br><img class="keyFactIcon" src="img/gender2.svg" alt="overtime"></div>
+    <div class="keyFactGender">See how gender can impact the relative importance of the topics <Br><img class="keyFactIcon" src="img/gender2.svg" alt="overtime"></div>
     <div id="parallelGender"></div>
     <hr class="dotted">
-      <h2 id="intro">You as well! Tell us what you think makes for a better life and share your preferences with us to help improve policies that really matter to you.    </h2>
+      <h2 id="intro">Now it's your turn! Tell us what <b>YOU</b> think makes for a better life! Share your preferences with us and help improve policies that really matter to you!    </h2>
     <iframe id="embedBLI"  src="http://gitvfd.github.io/BLI-2016-EN" seamless></iframe>
     <!-- OPTIONAL 
     <br>
