--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
     
     <img  id="logo" src="img/BLI-logo.png"></img>
     <div id="intro">
-      <h2 id="intro">What do <a href="http://www.oecdbetterlifeindex.org" target="_blank">OECD Better Life Index</a> users think?</h2>
+      <h2 id="intro">The <a href="http://www.oecdbetterlifeindex.org" target="_blank">OECD's Better Life Index</a> has been collecting feedback from visitors since its launch in 2011. What part does gender or age play in our choices? Do our preferences change over time? This dashboard provides insight on what people have shared in 21 countries from where we have received over 1,000 responses.</h2>
     </div>
-
-      <p id="intro">Users have rated the 11 topics of well-being according to the importance they give them. These topics were identified as essential by the OECD and include areas of material living conditions and quality of life. Select one of the countries below to find out more about what users think make for a better life.</p>
     <br>
     <div ><span id="selectedCou">Total</span>: <span id="numberAnswerSelection"></span> <span id="wordDesign">responses</span></div>
     <hr class="dotted">
@@ -45,7 +43,7 @@
     <h1 class="title">Importance of the topics</h1>
     <h2 class="subtitle">In percentage</h2>
     <p class="explanation"></p>
-    <div class="keyFact">See the relative importance of each topic for all users and users from the selected country<br/><img class="keyFactIcon" src="img/preferenceIcon.svg" alt="overtime"></div>
+    <div class="keyFact">How does one country's priorities compare to well-being preferences worldwide?<br/><img class="keyFactIcon" src="img/preferenceIcon.svg" alt="overtime"></div>
     <div id="spiderPref"></div>
     <hr class="dotted">
     <h1 class="title">Relative importance of topics over time</h1>
