added flower icon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <meta lang="en" http-equiv="content-type" content="text/html; charset=UTF8">
 <html>
   <head>
+
+    <!-- for FF, Chrome, Opera -->
+    <link rel="icon" type="image/png" href="img/favicon16.png" sizes="16x16">
+
+    <!-- for IE -->
+    <link rel="icon" type="image/x-icon" href="/assets/favicons/favicon.ico" >
+    <link rel="shortcut icon" type="image/x-icon" href="/assets/favicons/favicon.ico"/>
+
     <title>BLI Dashboard</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
     <!-- Latest compiled and minified CSS -->
@@ -54,10 +62,10 @@
     <div class="keyFact" lang="en">How does one country's priorities compare to well-being preferences worldwide?<br/><img class="keyFactIcon" src="img/preferenceIcon.svg" alt="overtime"></div>
     <div id="spiderPref"></div>
     <hr class="dotted">
-    <h1 class="title" lang="en">Relative importance of topics over time</h1>
+    <h1 class="title" lang="en">Relative importance of topics each year</h1>
     <h2 class="subtitle" lang="en">In percentage</h2>
     <p class="explanation"></p>
-    <div class="keyFact" lang="en">See how the importance attributed to each topic evolves over time<Br><img class="keyFactIcon" src="img/timeIcon.svg" alt="overtime"></div>    
+    <div class="keyFact" lang="en">See how the importance attributed to each topic by different users changes from year to year. <Br><img class="keyFactIcon" src="img/timeIcon.svg" alt="overtime"></div>    
     <div id="parallelYear"></div>
     <hr class="dotted">
     <h1 class="title" lang="en">Relative importance of topics by age</h1>
